# horrible-ml

./: .gitignore  CMakeLists.txt  README.md
include/: horribleapp.hpp  horribleutils.hpp
src/: horribleapp.cc  main.cc
test/: CMakeLists.txt  horribleutils_test.cc
